--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <script defer src="app.js"></script>
+  <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- FONTS -->
@@ -53,10 +54,7 @@
     <div class="collapse" id="templates">
       <div class="card card-body">
         <div class="templateContentDiv">
-          <img src="file:///Users/jayme/Downloads/model1.png" id="humanModelPic" class="img-responsive img-fluid" alt="Human Model">
-          <img src="file:///Users/jayme/Downloads/model1.png" id="humanModelPic" class="img-responsive img-fluid" alt="Human Model">
-          <img src="file:///Users/jayme/Downloads/model1.png" id="humanModelPic" class="img-responsive img-fluid" alt="Human Model">
-        </div>
+          <img src="assets/humanModelPic.png" id="humanImage" class="img-responsive img-fluid" alt="Human Model">
       </div>
     </div>
 
@@ -64,7 +62,7 @@
     <!-- ACCESSORIES BUTTON CONTENT -->
     <div class="collapse" id="accessories">
       <div class="card card-body">
-        <img src="https://cdn.pixabay.com/photo/2014/11/19/17/33/oxeye-daisy-538024_960_720.jpg" id="daisyPic" class="img-responsive" alt="daisy">
+
       </div>
     </div>
 
@@ -87,32 +85,31 @@
     <!-- CLOTHING TOPS IMAGE CONTENT -->
     <div class="collapse" id="tops">
       <div class="card card-body">
-        <img src="https://cdn.pixabay.com/photo/2014/11/19/17/33/oxeye-daisy-538024_960_720.jpg" id="daisyPic" class="img-responsive" alt="daisy">
+
       </div>
     </div>
 
     <!-- CLOTHING BOTTOMS IMAGE CONTENT -->
     <div class="collapse" id="bottoms">
       <div class="card card-body">
-        <img src="https://cdn.pixabay.com/photo/2014/11/19/17/33/oxeye-daisy-538024_960_720.jpg" id="daisyPic" class="img-responsive" alt="daisy">
       </div>
     </div>
 
     <!-- CLOTHING DRESSES IMAGE CONTENT -->
     <div class="collapse" id="dresses">
       <div class="card card-body">
-        <img src="https://cdn.pixabay.com/photo/2014/11/19/17/33/oxeye-daisy-538024_960_720.jpg" id="daisyPic" class="img-responsive" alt="daisy">
       </div>
     </div>
 
 
   </div>
-
+</div>
 
   <!-- CANVAS -->
-  <div id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
-    <canvas width="300" height="300"></canvas>
-  </div>
+  <!-- <div id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"> -->
+    <!-- <canvas width="300" height="300"></canvas> -->
+    <canvas id="canvas"></canvas>
+  <!-- </div> -->
 
   <!-- LIBRARIES -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
