created forEach for my images, created tags for each image and appended to DOM

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <button class="btn btn-info btn-lg btn-block btn-danger" type="button" data-toggle="collapse" data-target="#templates" aria-expanded="false" aria-controls="templates">
     Templates
     </button>
-    <button class="btn btn-info btn-lg btn-block btn-danger" type="button" data-toggle="collapse" data-target="#messages" aria-expanded="false" aria-controls="messages">
+      <button class="btn btn-info btn-lg btn-block btn-danger" type="button" data-toggle="collapse" data-target="#messages" aria-expanded="false" aria-controls="messages">
       Messages
     </button>
-    <button class="btn btn-info btn-lg btn-block btn-danger" type="button" data-toggle="collapse" data-target="#accessories" aria-expanded="false" aria-controls="accessories">
+      <button class="btn btn-info btn-lg btn-block btn-danger" type="button" data-toggle="collapse" data-target="#accessories" aria-expanded="false" aria-controls="accessories">
       Accessories
     </button>
       <button class="btn btn-info btn-lg btn-block btn-danger" type="button" data-toggle="collapse" data-target="#clothing" aria-expanded="false" aria-controls="clothing">
@@ -55,11 +55,13 @@
       <div class="card card-body">
         <div class="templateContentDiv">
           <img src="assets/humanModelPic.png" id="humanImage" class="img-responsive img-fluid" alt="Human Model">
+        </div>
       </div>
     </div>
 
 
     <!-- ACCESSORIES BUTTON CONTENT -->
+    <!-- "#accessories .card" selectpr-->
     <div class="collapse" id="accessories">
       <div class="card card-body">
 
@@ -103,12 +105,12 @@
 
 
   </div>
-</div>
+  </div>
 
   <!-- CANVAS -->
   <!-- <div id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"> -->
-    <!-- <canvas width="300" height="300"></canvas> -->
-    <canvas id="canvas"></canvas>
+  <!-- <canvas width="300" height="300"></canvas> -->
+  <canvas id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"></canvas>
   <!-- </div> -->
 
   <!-- LIBRARIES -->
