successfully created click events to render images to konva canvas by clicking image buttons in the sidebar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <script defer src="app.js"></script>
-  <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- FONTS -->
@@ -53,9 +52,9 @@
     <!-- TEMPLATE IMAGE CONTENT -->
     <div class="collapse" id="templates">
       <div class="card card-body">
-        <div class="templateContentDiv">
+        <!-- <div class="templateContentDiv">
           <img src="assets/humanModelPic.png" id="humanImage" class="img-responsive img-fluid" alt="Human Model">
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -108,13 +107,12 @@
   </div>
 
   <!-- CANVAS -->
-  <!-- <div id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"> -->
-  <!-- <canvas width="300" height="300"></canvas> -->
-  <canvas id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"></canvas>
-  <!-- </div> -->
+  <div id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"></div>
+
 
   <!-- LIBRARIES -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
