sized canvas to fit any screen

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- TEMPLATE BUTTON -->
     <p>
-      <button class="btn btn-lg btn-block btn-danger" data-toggle="collapse" data-target="#templates" aria-expanded="false" aria-controls="templates" data-parent="#sideBarContainer">
+      <button class="btn btn-lg btn-danger" data-toggle="collapse" data-target="#templates" aria-expanded="false" aria-controls="templates" data-parent="#sideBarContainer">
     Templates
   </button>
       <!-- TEMPLATE IMAGE CONTENT -->
@@ -47,13 +47,13 @@
 
 
       <!-- CLOTHING BUTTON -->
-      <button class="btn btn-lg btn-block btn-danger" data-toggle="collapse" data-target="#clothing" aria-expanded="false" aria-controls="clothing" data-parent="#sideBarContainer">
+      <button class="btn btn-lg btn-danger" data-toggle="collapse" data-target="#clothing" aria-expanded="false" aria-controls="clothing" data-parent="#sideBarContainer">
     Clothing
   </button>
       <!-- DRESSES BUTTON -->
       <div class="collapse" id="clothing">
         <div class="card card-body" data-parent="sideBarContainer">
-          <button class="btn btn-dark btn-block" data-toggle="collapse" data-target="#dresses" aria-expanded="false" aria-controls="dresses" data-parent="#sideBarContainer">
+          <button class="btn btn-dark" data-toggle="collapse" data-target="#dresses" aria-expanded="false" aria-controls="dresses" data-parent="#sideBarContainer">
         Dresses
       </button>
           <!-- CLOTHING DRESSES IMAGE CONTENT -->
@@ -63,7 +63,7 @@
           </div>
 
           <!-- TOPS BUTTON -->
-          <button class="btn btn-dark btn-block" data-toggle="collapse" data-target="#tops" aria-expanded="false" aria-controls="tops" data-parent="#sideBarContainer">
+          <button class="btn btn-dark" data-toggle="collapse" data-target="#tops" aria-expanded="false" aria-controls="tops" data-parent="#sideBarContainer">
         Tops
       </button>
           <!-- CLOTHING TOPS IMAGE CONTENT -->
@@ -73,7 +73,7 @@
           </div>
 
           <!-- BOTTOMS BUTTON -->
-          <button class="btn btn-dark btn-block" data-toggle="collapse" data-target="#bottoms" aria-expanded="false" aria-controls="bottoms" data-parent="#sideBarContainer">
+          <button class="btn btn-dark" data-toggle="collapse" data-target="#bottoms" aria-expanded="false" aria-controls="bottoms" data-parent="#sideBarContainer">
         Bottoms
       </button>
           <!-- CLOTHING BOTTOMS IMAGE CONTENT -->
@@ -88,7 +88,7 @@
 
 
     <!-- ACCESSORIES BUTTON -->
-    <button class="btn btn-lg btn-block btn-danger" data-toggle="collapse" data-target="#accessories" aria-expanded="false" aria-controls="accessories" data-parent="#sideBarContainer">
+    <button class="btn btn-lg btn-danger" data-toggle="collapse" data-target="#accessories" aria-expanded="false" aria-controls="accessories" data-parent="#sideBarContainer">
       Accessories
     </button>
     <!-- ACCESSORIES IMAGE CONTENT -->
@@ -100,7 +100,7 @@
 
 
     <!-- MESSAGES BUTTON -->
-    <button class="btn btn-lg btn-block btn-danger" id="messageButton" data-toggle="collapse" data-target="#messages" aria-expanded="false" aria-controls="messages" data-parent="#sideBarContainer">
+    <button class="btn btn-lg btn-danger" id="messageButton" data-toggle="collapse" data-target="#messages" aria-expanded="false" aria-controls="messages" data-parent="#sideBarContainer">
       Messages
     </button>
 
