--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
   <div id="page-header">
     <div class="d-flex p-2" id="titleFlexBox">
       <h1 id="title">Put Clothes on Things</h1>
-      <img src="https://cdn.pixabay.com/photo/2014/11/19/17/33/oxeye-daisy-538024_960_720.jpg" id="daisyPic" class="img-responsive" alt="daisy">
+      <img src="/assets/daisyPic.jpg" id="daisyPic" class="img-responsive" alt="daisy">
     </div>
   </div>
 
 
 
   <!-- SIDEBAR -->
-  <div id="sideBarContainer" class="col-lg-5 col-md-5 col-sm-5 col-xs-5" class="card">
+  <div id="sideBarContainer" class="col-lg-4 col-md-4 col-sm-4 col-xs-12" class="card">
 
 
     <!-- TEMPLATE BUTTON -->
     <p>
-      <button class="btn btn-lg btn-danger" data-toggle="collapse" data-target="#templates" aria-expanded="false" aria-controls="templates" data-parent="#sideBarContainer">
+      <button class="btn btn-lg btn-danger btn-block" data-toggle="collapse" data-target="#templates" aria-expanded="false" aria-controls="templates" data-parent="#sideBarContainer">
     Templates
   </button>
       <!-- TEMPLATE IMAGE CONTENT -->
@@ -47,13 +47,13 @@
 
 
       <!-- CLOTHING BUTTON -->
-      <button class="btn btn-lg btn-danger" data-toggle="collapse" data-target="#clothing" aria-expanded="false" aria-controls="clothing" data-parent="#sideBarContainer">
+      <button class="btn btn-lg btn-danger btn-block" data-toggle="collapse" data-target="#clothing" aria-expanded="false" aria-controls="clothing" data-parent="#sideBarContainer">
     Clothing
   </button>
       <!-- DRESSES BUTTON -->
       <div class="collapse" id="clothing">
         <div class="card card-body" data-parent="sideBarContainer">
-          <button class="btn btn-dark" data-toggle="collapse" data-target="#dresses" aria-expanded="false" aria-controls="dresses" data-parent="#sideBarContainer">
+          <button class="btn btn-dark btn-block" data-toggle="collapse" data-target="#dresses" aria-expanded="false" aria-controls="dresses" data-parent="#sideBarContainer">
         Dresses
       </button>
           <!-- CLOTHING DRESSES IMAGE CONTENT -->
@@ -63,7 +63,7 @@
           </div>
 
           <!-- TOPS BUTTON -->
-          <button class="btn btn-dark" data-toggle="collapse" data-target="#tops" aria-expanded="false" aria-controls="tops" data-parent="#sideBarContainer">
+          <button class="btn btn-dark btn-block" data-toggle="collapse" data-target="#tops" aria-expanded="false" aria-controls="tops" data-parent="#sideBarContainer">
         Tops
       </button>
           <!-- CLOTHING TOPS IMAGE CONTENT -->
@@ -73,7 +73,7 @@
           </div>
 
           <!-- BOTTOMS BUTTON -->
-          <button class="btn btn-dark" data-toggle="collapse" data-target="#bottoms" aria-expanded="false" aria-controls="bottoms" data-parent="#sideBarContainer">
+          <button class="btn btn-dark btn-block" data-toggle="collapse" data-target="#bottoms" aria-expanded="false" aria-controls="bottoms" data-parent="#sideBarContainer">
         Bottoms
       </button>
           <!-- CLOTHING BOTTOMS IMAGE CONTENT -->
@@ -88,7 +88,7 @@
 
 
     <!-- ACCESSORIES BUTTON -->
-    <button class="btn btn-lg btn-danger" data-toggle="collapse" data-target="#accessories" aria-expanded="false" aria-controls="accessories" data-parent="#sideBarContainer">
+    <button class="btn btn-lg btn-danger btn-block" data-toggle="collapse" data-target="#accessories" aria-expanded="false" aria-controls="accessories" data-parent="#sideBarContainer">
       Accessories
     </button>
     <!-- ACCESSORIES IMAGE CONTENT -->
@@ -100,7 +100,7 @@
 
 
     <!-- MESSAGES BUTTON -->
-    <button class="btn btn-lg btn-danger" id="messageButton" data-toggle="collapse" data-target="#messages" aria-expanded="false" aria-controls="messages" data-parent="#sideBarContainer">
+    <button class="btn btn-lg btn-danger btn-block" id="messageButton" data-toggle="collapse" data-target="#messages" aria-expanded="false" aria-controls="messages" data-parent="#sideBarContainer">
       Messages
     </button>
 
@@ -121,7 +121,7 @@
   <!-- </div> -->
 
   <!-- CANVAS -->
-  <div id="canvas" class="col-lg-7 col-md-7 col-sm-7 col-xs-7"></div>
+  <div id="canvas" class="col-lg-8 col-md-8 col-sm-8 col-xs-12"></div>
 
 
   <!-- LIBRARIES -->
