--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <title>Q1Project</title>
+  <title>Put Clothes on Things</title>
 </head>
 
 
