fixing font size and broken image src

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="page-header">
     <div class="d-flex p-2" id="titleFlexBox">
       <h1 id="title">Put Clothes on Things</h1>
-      <img src="/assets/daisyPic.jpg" id="daisyPic" class="img-responsive" alt="daisy">
+      <img src="assets/daisyPic.jpg" id="daisyPic" class="img-responsive" alt="daisy">
     </div>
   </div>
 
